[tool.poetry]
name = "koda-validate"
version = "4.1.1"
readme = "README.md"
description = "Typesafe, composable validation"
documentation = "https://koda-validate.readthedocs.io/en/stable/"
authors = ["Keith Philpott"]
license = "MIT"
homepage = "https://github.com/keithasaurus/koda-validate"
keywords = ["validation", "type hints", "asyncio", "serialization", "typesafe", "validate", "validators", "predicate", "processor"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: MacOS X',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Unix',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Utilities',
    'Typing :: Typed'
]

[tool.poetry.dependencies]
python = "^3.8.1"
koda = "1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.0.2"
pyright = "1.1.352"
pytest-cov = "4.1.0"
isort = "5.13.2"
flake8 = "7.0.0"
pre-commit = "3.4.0"
mypy = "1.8.0"
pydantic = "2.6.3"
pytest-asyncio = "0.23.5"
voluptuous = "0.14.2"
ssort = "0.12.4"
jsonschema = "4.21.1"
types-jsonschema = "4.21.0.20240118"
sphinx = "6.2.1"
furo = "2023.9.10"
flask = {version = "3.0.2", extras = ["async"]}
django = "4.2.10"
django-stubs = "4.2.7"
pytest-django = "4.8.0"
sphinx-autodoc-typehints = "1.23.0"
darglint = "1.8.1"
black = "24.2.0"

[tool.mypy]
exclude = ["build", "bench"]
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
# we need to wait for this to be up-to-date
#enable_recursive_aliases = true
ignore_errors = false
ignore_missing_imports = false
local_partial_types = true
no_implicit_optional = true
no_implicit_reexport = true
strict_optional = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true


[tool.pytest.ini_options]
addopts ="""
  --cov=koda_validate
  --cov-report=term:skip-covered
  --cov-report=html
  --cov-branch
  --cov-fail-under=94
  --ds=examples.django_example.django_example.settings
"""
# ^^  --ds = "django settings module"


[tool.coverage.run]
omit = [
    "koda_validate/validate_and_map.py",
    "tests/*"
]

[tool.isort]
line_length = 90
profile = "black"

[tool.black]
line_length = 90
target_version = ['py310']

[tool.pyright]
include = ["koda_validate", "tests", "examples"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
